# retrievall-oss

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
nbs/: 01_corpus.ipynb  02_chunks.ipynb  03_exprs.ipynb  04_filters.ipynb  api.ipynb
src/: __init__.py  chunkers.py  core.py  exprs.py  filters.py
src/ocr/: __init__.py  ocr.py
src/sparsetext/: __init__.py  scorers.py
tests/: conftest.py  test_chunkers.py  test_exprs.py  test_filters.py  test_ocr.py  test_sparsetext.py
